--- a/po/template.pot
+++ b/po/template.pot
@@ -244,7 +244,7 @@ msgid "Verzekering"
 msgstr ""
 
 #: public/partials/video.html:4
-msgid "Video's to get some taste"
+msgid "Video's to get a first taste"
 msgstr ""
 
 #: public/partials/info.html:51
