--- a/po/en.po
+++ b/po/en.po
@@ -19,11 +19,11 @@ msgstr "(actual dates may vary from those above)"
 msgid "2 weken kitesafari € 1950,00"
 msgstr "2 weeks kitesafari € 1950,00"
 
-#: public/partials/info.html:105
+#: public/partials/info.html:99
 msgid "2 á 3 kites en een surfboard"
 msgstr "2-3 kites and a surfboard"
 
-#: public/partials/info.html:89
+#: public/partials/info.html:83
 msgid ""
 "<a href=\"http://www.seabreeze.com.au/graphs/wa3.asp\">Seabreeze</a> is een "
 "zeer interessante site met veel informatie over het weer en de lokatie."
@@ -32,7 +32,7 @@ msgstr ""
 "very interesting site with lots of information about the weather and the "
 "location. "
 
-#: public/partials/info.html:88
+#: public/partials/info.html:82
 msgid ""
 "<a href=\"http://www.trivago.com/?iPathId=44315&amp;bDispMoreFilter=true&amp;"
 "aDateRange%5Barr%5D=2015-06-14&amp;aDateRange%5Bdep%5D=2015-06-15&amp;"
@@ -60,7 +60,7 @@ msgstr ""
 "Deposit 950.00 by the end of August 2015. The remaining payment of € 1000, - "
 "must be transferred by the end of November 2015."
 
-#: public/partials/info.html:76
+#: public/partials/info.html:70
 msgid ""
 "Als zich serieuze weer waarschuwingen voordoen voor de noordelijke kustlijn/"
 "Pilbarra zullen wij de\n"
@@ -76,11 +76,11 @@ msgstr ""
 "for surfing and kiting on the central coast. Our trip can also be moved to "
 "the Southwest."
 
-#: public/partials/info.html:71
+#: public/partials/info.html:68
 msgid "Annulering"
 msgstr "Cancellations"
 
-#: public/partials/info.html:92
+#: public/partials/info.html:86
 msgid "Belangrijk is niet al te veel mee te nemen."
 msgstr "It is important not to bring to many items on the trip."
 
@@ -141,10 +141,25 @@ msgstr ""
 "minimum. 6, 7, 8, and 9 meter kites are the most used in these conditions if "
 "you weight around 80kg (175 lbs or 12.5 stone). "
 
-#: public/partials/info.html:68
+#: public/partials/info.html:65
 msgid "Deze formulieren moet je getekend opsturen of meenemen."
 msgstr ""
 "These forms must be signed and send to us or you can take these with you."
+
+#: public/partials/about-us.html:19
+msgid ""
+"Door het vele reizen over de hele wereld, mijn ervaring in de entertainment "
+"industrie, jarenlange horeca ervaring bij Far Out, het verhuren van zomer "
+"appartementen en mijn vrolijke persoonlijkheid ga ík er alles aan doen om de "
+"perfecte gastvrouw voor jullie te zijn tijdens dit avontuur. Daarnaast zal "
+"ik mij met name bezig houden met de boekingen, planning van de trips en "
+"organisatie."
+msgstr ""
+"My many travel experiences over the whole world, entertainment background, "
+"long years managing a beach café, renting out holiday apartments, and my "
+"cheerful personality will help me to be the perfect hostess for you on this "
+"once-in-a-lifetime adventure. Also, I will be responsible for bookings, "
+"planning and organizing your trips. "
 
 #: public/partials/video.html:15
 msgid "Enkele foto's en video's in een montage."
@@ -154,11 +169,11 @@ msgstr "Some pictures and videos in a montage."
 msgid "Enkele video fragmenten van onze laatste trip."
 msgstr "Some video clips from our last trip."
 
-#: public/partials/info.html:104
+#: public/partials/info.html:98
 msgid "Goede sunblock bijv. Island tribe 40+"
 msgstr "Good sunscreen or sunblock e.g. Island Tribe 40+"
 
-#: public/partials/info.html:103
+#: public/partials/info.html:97
 msgid ""
 "Goede zonnebril (Ik zou een waterzonnebril aanraden want de zon in Australië "
 "kan verblindend zijn)"
@@ -177,15 +192,15 @@ msgstr ""
 #: public/partials/info.html:58
 msgid ""
 "Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de "
-"kite geralteerde activiteiten dekt. Dan kan bijvoorbeeld bij <a href="
+"kite gerelateerde activiteiten dekt. Dan kan bijvoorbeeld bij <a href="
 "\"https://www.allianz-assistance.nl/reisverzekering/adventure-en-survival-"
 "verzekering\">Allianz Global Assistance</a> of via de <a href=\"http://www."
 "funsportpolis.nl/index.php/faq\">Nederlandse kitevereningingn (NKV)</a>"
 msgstr ""
 "It is important that you have good travel insurance that covers kiting and "
 "kite related activities. Insurance campanies providing this coverage are for "
-"example <a href=\"http://www.allianz-global-assistance.com/corporate/"
-"\">Allianz Global Assistance</a> "
+"example <a href=\"https://www.allianz-assistance.nl/reisverzekering/"
+"adventure-en-survival-verzekering\">Allianz Global Assistance</a> "
 
 #: public/partials/home.html:62
 msgid ""
@@ -199,6 +214,37 @@ msgstr ""
 "our trip. This means that should an emergency arise, we can reach a hospital "
 "or doctor within 1.5 hours."
 
+#: public/partials/about-us.html:10
+msgid ""
+"Ik ben geboren in Amsterdam en woon nu in Zandvoort. Zo'n 17 jaar geleden "
+"ben ik begonnen met kitesurfen. Daarnaast heb ik ook allerlei andere "
+"watersporten gedaan zoals, windsurfen, zeilen, wave-skiën en golf surfen."
+msgstr ""
+" was born in Amsterdam and now live in the Dutch coastal town of Zandvoort. "
+"About 17 years ago, I started kite surfing. Next to kiting, I have practiced "
+"all sorts of other water sports such as wind surfing, sailing, wave skiing, "
+"and surfing. "
+
+#: public/partials/about-us.html:18
+msgid ""
+"Ik ben geboren in Zuid-Afrika, met mijn 15de emigreerde ik naar Nederland. "
+"Ik ben zangeres en mijn gitaar reist mee naar alle bestemmingen. De mooiste "
+"reizen die ik heb gemaakt zijn wel díe naar Australië geweest, vooral de "
+"trips naar het Noorden en Zuiden. Ik houd ervan om onderweg zijn, je ontmoet "
+"veel mensen uit allerlei culturen en landen, ziet zoveel verschillende "
+"stranden met een enorm scala aan mogelijkheden en de volgende dag is altijd "
+"een verrassing. Met enkele jaren kite ervaring en liefde voor water, voel ik "
+"mij thuis dáár waar er zee en wind is."
+msgstr ""
+"I was born in South Africa and moved to the Netherlands at the age of 15 "
+"where I still live today. I am a professional singer and my guitar travels "
+"with me to all our destinations. Of all the trips I have taken, the ones to "
+"Australia are the most unforgettable especially those to the north and south "
+"of the West Coast. I love to travel: meeting new people from different "
+"cultures and countries, discovering new beaches, waking up to a new day full "
+"of surprises. With a few years of kiting experience and a love for the "
+"water, I feel at home where the ocean is and the wind blows. "
+
 #: public/partials/home.html:29
 msgid ""
 "In deze ongelooflijke mooie omgeving waar de natuur nog ongerept is, is het "
@@ -211,22 +257,21 @@ msgstr ""
 "of 20 meters (65 feet). Western Australia is the ideal place to camp on the "
 "beach, in the bush, or on one of the many well-maintained campsites."
 
-#: public/partials/info.html:72
+#: public/partials/info.html:69
 msgid ""
 "In het geval dat de trip geannuleerd wordt door te weinig inschrijvingen "
-"word de aanbetaling volledig teruggestort.\n"
-"      Als je de trip wilt annuleren 30 dagen voor vertrek is de aanbetaling "
-"niet uitkeerbaar. Wij hanterenhiervoor dezelfde regels als in de <a href="
-"\"http://www.anvr.nl/\">ANVR</a>. Wat doen wij bij annulering door cyclonen "
-"e.d.?"
+"word de aanbetaling volledig teruggestort. Als je de trip wilt annuleren 30 "
+"dagen voor vertrek is de aanbetaling niet uitkeerbaar. Wij hanteren hiervoor "
+"dezelfde regels als in de <a href=\"http://www.anvr.nl/\">ANVR</a>. Wat doen "
+"wij bij annulering door cyclonen e.d.?"
 msgstr ""
 "In the event that a trip has to be cancelled due to insufficient number of "
-"participants, your deposit will be returned to you in its entirety. If you "
+"participants, your deposit will be returned to you in its entirety.  If you "
 "need to cancel your trip reservation within 30 days or less of the departure "
 "date, your deposit will not be refunded. We abide by the rules of the <a "
 "href=\"http://www.anvr.nl/travel-terms-and-conditions/\">ANVR</a> (Algemene "
 "Nederlandse Vereniging van Reisondernemingen – Dutch Travel Agencies). "
-"Cancellations due to events such as cyclones are also covered here. "
+"Cancellations due to events such as cyclones are also covered here.  "
 
 #: public/partials/info.html:7
 msgid "Inbegrepen in de Prijs:"
@@ -240,7 +285,7 @@ msgstr "Minimum participation for a trip is 8 people, maximum is 10 people."
 msgid "Je in- uitzomen op de kitespots waar we komen."
 msgstr "You can zoom in on the kite spots shown."
 
-#: public/partials/info.html:91
+#: public/partials/info.html:85
 msgid "Kleding e.d."
 msgstr "Clothing etc."
 
@@ -248,7 +293,7 @@ msgstr "Clothing etc."
 msgid "Koffie, thee, water, limonade en 2 x gedestilleerde dranken"
 msgstr "Coffee, tea, water, lemonade and 2 x spirits"
 
-#: public/partials/info.html:101
+#: public/partials/info.html:95
 msgid "Lycra"
 msgstr "Lycra"
 
@@ -274,22 +319,55 @@ msgstr ""
 "smaller waves, flat water, high waves, and reef break. The Western Australia "
 "coast is also the perfect place to do downwinders and ride on 4WD tracks."
 
+#: public/partials/about-us.html:11
+msgid ""
+"Mijn sport was altijd doel tot de bestemming van mijn reis en zó hebben wij "
+"over de hele wereld gezworven van Zuid-Afrika tot Brazilië, Costa Rica, "
+"Mexico, Amerika, Hawaï, Bali en Spanje maar de meeste trips zijn wel naar "
+"Australië geweest, daar kom ik al zo'n 18 jaar en ondertussen weet ik alle "
+"top spots te vinden in het Westen."
+msgstr ""
+"My sports have always been the center piece of my trips abroad and have led "
+"us around the world to places such as South Africa, Brazil, Cost Rica, "
+"Mexico, the US, Hawaii, Bali, and Spain. However, my favorite travel spot is "
+"by far Australia. I have come here many times over the past 18 years and "
+"know the West Coast and all its top kite spots like the back of my hand."
+
+#: public/partials/about-us.html:12
+msgid ""
+"Naast de fantastische omstandigheden voor het kitesurfen en andere "
+"watersporten alsook het weer en veiligheid zijn Australiërs ontzettend "
+"gastvrij en oprecht. Dat is ook wel iets dat ons erg aanspreekt. Na "
+"jarenlange ervaring in de horeca (Ik was 20 jaar eigenaar van "
+"strandpaviljoen <em>FarOut</em> te Zandvoort)  ben ik ervan overtuigd dat "
+"mensen entertainen en verzorgen mij op het lijf geschreven is. Met deze "
+"safari wil ik dát combineren met jullie naar de mooiste kite spots van West-"
+"Australië te nemen."
+msgstr ""
+"Next to the dream conditions for kiting and other water sports, the "
+"fantastic weather, and the safe travel environment, the people Down Under "
+"are some of the friendlies and most hospitable making this one of our "
+"favorite destinations in the world. I believe that my long experience in the "
+"hospitality business – I was the owner and operator of a successful beach "
+"café in Zandvoort for 20 years – is perfectly suited to plan and run the "
+"kind of trip that will provide you with a unique and unforgettable "
+"experience to the most beautiful spots in Western Australia. "
+
 #: public/partials/info.html:60
 msgid ""
 "Omdat je mee gaat doen met kitevakantie verwachten we dat je genoeg ervaring "
-"hebt. \n"
-"      Daarom vinden we het belangrijk dat je de volgende informatie goed "
+"hebt. Daarom vinden we het belangrijk dat je de volgende informatie goed "
 "gelezen hebt:"
 msgstr ""
 "Because you're going to get involved with kite vacation, we expect that you "
-"have enough experience.  Therefore we find it important that you read the "
-"following information carefully:"
+"have enough experience.        Therefore we find it important that you read "
+"the following information carefully: "
 
 #: public/partials/info.html:11
 msgid "Ontbijt, lunch, avondeten en snacks in between"
 msgstr "Breakfast, lunch, dinner and snacks in between"
 
-#: public/partials/info.html:86
+#: public/partials/info.html:80
 msgid "Overige informatie"
 msgstr "Travel information"
 
@@ -297,7 +375,7 @@ msgstr "Travel information"
 msgid "Overnachtingen op campings en toeslag entrée voor natuurparken"
 msgstr "Overnight stays at campsites and entrance fee for parks"
 
-#: public/partials/info.html:100
+#: public/partials/info.html:94
 msgid "Petje"
 msgstr "Hat"
 
@@ -319,11 +397,11 @@ msgstr ""
 "Under. After a relaxing first day in the beautiful city of Perth – where we "
 "will overnight on a campsite – our trip up north begins."
 
-#: public/partials/info.html:96
+#: public/partials/info.html:90
 msgid "Short"
 msgstr "Shorts"
 
-#: public/partials/info.html:102
+#: public/partials/info.html:96
 msgid ""
 "Shorty voor in de middag (Als je te lang vaart schuurt je buik open door "
 "zout en zand)"
@@ -331,19 +409,19 @@ msgstr ""
 "Shorty for the afternoon (if you kite long, your midriff may scratch from "
 "sand and salt)"
 
-#: public/partials/info.html:99
+#: public/partials/info.html:93
 msgid "Slippers en een paar goede schoenen"
 msgstr "Sandals and a good pair of shoes"
 
-#: public/partials/info.html:97
+#: public/partials/info.html:91
 msgid "Sokken"
 msgstr "socks"
 
-#: public/partials/info.html:95
+#: public/partials/info.html:89
 msgid "Spijkerbroek"
 msgstr "Jeans"
 
-#: public/partials/info.html:98
+#: public/partials/info.html:92
 msgid "T-shirts, sweater en een hoody omdat het 's avond soms kan afkoelen"
 msgstr "T-shirts and a sweater for the evening hours; it can cool down"
 
@@ -359,7 +437,7 @@ msgstr "Toyota land cruisers, roof tents, ordinary tents, kitchen trailer."
 msgid "Trailer voor boards, kites, SUP boards, bootje, vishengels e.d."
 msgstr "Trailer for boards, kites, SUP boards, boat, fishing rods, etc."
 
-#: public/partials/info.html:94
+#: public/partials/info.html:88
 msgid "Training broek"
 msgstr "Sweat pants"
 
@@ -383,7 +461,7 @@ msgstr "Video's to get some taste"
 msgid "Vliegtickets variëren in prijs van € 900,00 tot € 1400,00"
 msgstr "Ticket price varies from €900 to €1400"
 
-#: public/partials/info.html:107
+#: public/partials/info.html:101
 msgid ""
 "Voor díegene die willen afwisselen zijn er genoeg twin-tips aanwezig alsook "
 "reserve kites, SUP- en surfboards, snorkel- en visuitrusting"
@@ -429,94 +507,6 @@ msgstr "10 flight hours from Dubai to Perth on a Airbus 380"
 #: public/partials/info.html:48
 msgid "ca. 6 vlieguren naar Dubai met A380"
 msgstr "6 flight hours from Northern Europe to Dubai"
-
-#~ msgid ""
-#~ "Door het vele reizen over de hele wereld, mijn ervaring in de "
-#~ "entertainment industrie, jarenlange\n"
-#~ "        horeca ervaring bij Far Out, het verhuren van zomer appartementen "
-#~ "en mijn vrolijke\n"
-#~ "        persoonlijkheid ga ík er alles aan doen om de perfecte gastvrouw "
-#~ "voor jullie te zijn tijdens dit avontuur.\n"
-#~ "        Daarnaast zal ik mij met name bezig houden met de boekingen, "
-#~ "planning van de trips en organisatie."
-#~ msgstr ""
-#~ "My many travel experiences over the whole world, entertainment "
-#~ "background, long years managing a beach café, renting out holiday "
-#~ "apartments, and my cheerful personality will help me to be the perfect "
-#~ "hostess for you on this once-in-a-lifetime adventure. Also, I will be "
-#~ "responsible for bookings, planning and organizing your trips."
-
-#~ msgid ""
-#~ "Ik ben geboren in Amsterdam en woon nu in Zandvoort. Zo'n 17 jaar geleden "
-#~ "ben ik begonnen met kitesurfen. \n"
-#~ "        Daarnaast heb ik ook allerlei andere watersporten gedaan zoals, "
-#~ "windsurfen, zeilen, wave-skiën en golf surfen."
-#~ msgstr ""
-#~ " was born in Amsterdam and now lives in the Dutch coastal town of "
-#~ "Zandvoort. About 17 years ago, I started kite surfing. Next to kiting, I "
-#~ "have practiced all sorts of other water sports such as wind surfing, "
-#~ "sailing, wave skiing, and surfing."
-
-#~ msgid ""
-#~ "Ik ben geboren in Zuid-Afrika, met mijn 15de emigreerde ik naar "
-#~ "Nederland. \n"
-#~ "      Ik ben zangeres en mijn gitaar reist mee naar alle bestemmingen.\n"
-#~ "      De mooiste reizen die ik heb gemaakt zijn wel díe naar Australië "
-#~ "geweest, vooral de trips naar het\n"
-#~ "      Noorden en Zuiden. Ik houd ervan om onderweg zijn, je ontmoet veel "
-#~ "mensen uit allerlei culturen\n"
-#~ "      en landen, ziet zoveel verschillende stranden met een enorm scala "
-#~ "aan mogelijkheden en de\n"
-#~ "      volgende dag is altijd een verrassing.\n"
-#~ "      Met enkele jaren kite ervaring en liefde voor water, voel ik mij "
-#~ "thuis dáár waar er zee en wind is."
-#~ msgstr ""
-#~ "I was born in South Africa and moved to the Netherlands at the age of 15 "
-#~ "where I still live today. I am a professional singer and my guitar "
-#~ "travels with me to all our destinations. Of all the trips I have taken, "
-#~ "the ones to Australia are the most unforgettable especially those to the "
-#~ "north and south of the West Coast. I love to travel: meeting new people "
-#~ "from different cultures and countries, discovering new beaches, waking up "
-#~ "to a new day full of surprises. With a few years of kiting experience and "
-#~ "a love for the water, I feel at home where the ocean is and the wind "
-#~ "blows. "
-
-#~ msgid ""
-#~ "Mijn sport was altijd doel tot de bestemming van mijn reis en zó hebben "
-#~ "wij over de hele wereld\n"
-#~ "        gezworven van Zuid-Afrika tot Brazilië, Costa Rica, Mexico, "
-#~ "Amerika, Hawaï, Bali en Spanje maar de\n"
-#~ "        meeste trips zijn wel naar Australië geweest, daar kom ik al zo'n "
-#~ "18 jaar en ondertussen weet ik alle\n"
-#~ "        top spots te vinden in het Westen."
-#~ msgstr ""
-#~ "My sports have always been the center piece of my trips abroad and have "
-#~ "led us around the world to places such as South Africa, Brazil, Cost "
-#~ "Rica, Mexico, the US, Hawaii, Bali, and Spain. However, my favorite "
-#~ "travel spot is by far Australia. I have come here many times over the "
-#~ "past 18 years and know the West Coast and all its top kite spots like the "
-#~ "back of my hand."
-
-#~ msgid ""
-#~ "Naast de fantastische omstandigheden voor het kitesurfen en andere "
-#~ "watersporten alsook het weer\n"
-#~ "        en veiligheid zijn Australiërs ontzettend gastvrij en oprecht. "
-#~ "Dat is ook wel iets dat ons erg\n"
-#~ "        aanspreekt. Na jarenlange ervaring in de horeca (Ik was 20 jaar "
-#~ "eigenaar van strandpaviljoen <em>FarOut</em> te Zandvoort) \n"
-#~ "        ben ik ervan overtuigd dat mensen entertainen en verzorgen mij op "
-#~ "het lijf\n"
-#~ "        geschreven is. Met deze safari wil ik dát combineren met jullie "
-#~ "naar de mooiste kite spots van West-Australië te nemen."
-#~ msgstr ""
-#~ "Next to the dream conditions for kiting and other water sports, the "
-#~ "fantastic weather, and the safe travel environment, the people Down Under "
-#~ "are some of the friendlies and most hospitable making this one of our "
-#~ "favorite destinations in the world. I believe that my long experience in "
-#~ "the hospitality business – I was the owner and operator of a successful "
-#~ "beach café in Zandvoort for 20 years – is perfectly suited to plan and "
-#~ "run the kind of trip that will provide you with a unique and "
-#~ "unforgettable experience to the most beautiful spots in Western Australia."
 
 #~ msgid ""
 #~ "<a href=\"/static/docs/Form-and-participation-agreement.pdf"
